--- a/src/app/employee-form/employee-form.component.html
+++ b/src/app/employee-form/employee-form.component.html
@@ -1,1 +1,28 @@
-<p>employee-form works!</p>
+<h2>{{ isEditing ? "Edit" : "Create" }} Employee</h2>
+
+<div *ngIf="errorMessage != ''">
+  {{ errorMessage }}
+</div>
+<form (ngSubmit)="onSubmit()">
+  <div>
+    <label>Firstname</label>
+    <input type="text" name="firstName" [(ngModel)]="employee.firstName" />
+  </div>
+  <div>
+    <label>Lastname</label>
+    <input type="text" name="lastName" [(ngModel)]="employee.lastName" />
+  </div>
+  <div>
+    <label>Phone</label>
+    <input type="text" name="phone" [(ngModel)]="employee.phone" />
+  </div>
+  <div>
+    <label>Email</label>
+    <input type="text" name="email" [(ngModel)]="employee.email" />
+  </div>
+  <div>
+    <label>Position</label>
+    <input type="text" name="position" [(ngModel)]="employee.position" />
+  </div>
+  <button type="submit">{{ isEditing ? "Edit" : "Create" }}</button>
+</form>
